--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AI Universe Hub</title>
+    <script src="https://kit.fontawesome.com/2e4412b04e.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+       body{
+            font-family: Work Sans;
+        }
+        h1, h2, h3, h4, h5, h6{
+            font-family: Work Sans;
+        }
+        /* .details-btn{
+            background-color: #FEF7F7;
+            width: 50px;
+            height: 50px;
+        } */
+    </style>
   </head>
   <body class="container">
     <header class="text-center py-4">
